--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,29 @@ body {
   margin:10px;
 }
 
+.header a{
+  color:white !important;
+}
+
+.header .user{
+  margin-left:auto;
+  margin-right: 15px;
+}
+
+.header .user span{
+  margin-right: 15px;
+}
+
+.header .user div{
+  display: flex;
+  align-items: center;
+}
+
+.header .user div img{
+  width: 50px;
+  margin-right: 15px;
+}
+
 button.pure-button a{
   color:white !important;
   text-decoration: none !important;
