--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,21 @@ body {
   justify-content: center;
   font-size: calc(10px + 1vmin);
   color: white;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 10;
 }
+
+a.link{
+  color:white;
+  margin:15px;
+  text-decoration: none !important;
+  padding:10px;
+  background: #0078e7;
+}
+
 .header > button{
   margin:10px;
 }
@@ -22,7 +36,7 @@ body {
 
 .header .user{
   margin-left:auto;
-  margin-right: 15px;
+  margin-right: 25px;
 }
 
 .header .user span{
@@ -35,11 +49,130 @@ body {
 }
 
 .header .user div img{
-  width: 50px;
   margin-right: 15px;
+}
+
+#page{
+  padding-top: 120px;
 }
 
 button.pure-button a{
   color:white !important;
   text-decoration: none !important;
+}
+
+.title a{
+  opacity: 0.5;
+}
+
+.title{
+  text-align: center;
+  font-size: larger;
+  margin: 25px 15px;
+}
+
+.title a.active {
+  opacity: 1;
+  text-decoration: none !important;
+}
+
+img.avatar{
+  width: 100px;
+  border-radius: 50%;
+  border: 2px solid #282c34;
+  padding: 10px;
+}
+
+img.avatar.avatar-small{
+  width: 50px;
+}
+
+.login ul{
+  display: flex;
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.login ul .user{
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  align-items: center;
+}
+
+.login ul .user button{
+  max-width: 100px;
+}
+
+.login ul .user span{
+  margin:15px;
+}
+
+.questions ul{
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.question, .addQuestion{
+  max-width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 25px;
+  border: 2px solid #282c34;
+  margin-bottom: 25px;
+}
+
+
+.container{
+  display: flex;
+}
+
+.container > div{
+  padding:10px;
+}
+
+.container > div.right {
+  flex:1;
+}
+
+.questionView, .addQuestion{
+  margin-top:25px;
+}
+
+.addQuestion{
+  font-size: larger;
+}
+
+.addQuestion input[type=text]{
+  margin-left: auto;
+  margin-right: auto;
+  width: 80%;
+  display: block;
+  padding:10px;
+}
+
+.addQuestion button{
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  display: inherit;
+}
+
+button{
+  font-size: larger;
+}
+
+form > div{
+  padding:10px;
+  margin:10px;
+}
+
+label{
+  margin-left: 25px;
+}
+
+input[type=radio]{
+  transform: scale(2);
 }
